<resources>
    <string name="app_name">Appstore</string>
    <string name="menu_add">Add</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="editText_appName">App name</string>
    <string name="editText_appPrice">App price</string>
    <string name="button_appAdd">Add App</string>
    <string name="button_appEdit">Save App</string>
    <string name="button_viewEdit">Edit App</string>
    <string name="button_appDelete">Delete App</string>
    <string name="button_cancel">Cancel</string>
    <string name="editText_appSearch">Search…</string>
    <string name="editText_priceDefault">0.00</string>
    <string name="button_rate">Rate App</string>
    <string name="button_changeIcon"> Change Icon </string>
    <string name="selectIcon"> Select Icon </string>
    <string name="button_signup"> Sign Up </string>
    <string name="button_login"> Login </string>
    <string name="button_google"> Google </string>
    <string name="email"> Email </string>
    <string name="password"> Password </string>
    <string name="confirm_password"> Confirm Password </string>
    <string name="appstore"> Appstore </string>
    <string name="editText_comment"> Comment </string>

    <string-array name="spinner_sort">
        <item>Name: A-Z</item>
        <item>Name: Z-A</item>
        <item>Price: Low-High</item>
        <item>Price: High-Low</item>
        <item>Rating: Low-High</item>
        <item>Rating: High-Low</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>