<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/borderLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/appValues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/appName"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight=".50"
                    android:autofillHints="hint"
                    android:hint="@string/editText_appName"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/appPrice"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight=".50"
                    android:autofillHints="hint"
                    android:hint="@string/editText_appPrice"
                    android:inputType="numberDecimal"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <Spinner
                android:id="@+id/appType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@id/appValues" />

            <LinearLayout
                android:id="@+id/appIcons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/appType">
                <ImageView
                    android:id="@+id/appIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:layout_weight=".33"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher"
                    tools:ignore="ImageContrastCheck" />
                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".67"
                    android:background="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:importantForAccessibility="no"
                    android:padding="8dp"
                    android:text="@string/button_changeIcon"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="VisualLintButtonSize" />
            </LinearLayout>


            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:background="@color/white"
                android:padding="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_appAdd"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appIcons" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:background="@color/white"
                android:padding="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_appDelete"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:padding="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_cancel"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>