<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dropdown"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="100dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".views.view.AppViewFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight=".50"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/appName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            tools:text="App Name" />
                        <TextView
                            android:id="@+id/appType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            tools:text="App Type" />
                        <TextView
                            android:id="@+id/appPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            tools:text="Price" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="0.50"
                        android:contentDescription="TODO"
                        android:src="@drawable/splash_screen" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_viewEdit"
                    android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/ratingBar">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".75"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="0dp"
                    android:layout_margin="16dp">

                    <EditText
                        android:id="@+id/comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:autofillHints="hint"
                        android:hint="@string/editText_comment"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:inputType="text" />

                    <Button
                        android:id="@+id/btnRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="0dp"
                        android:background="@color/white"
                        android:padding="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_rate"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/avgRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/white"
                        android:padding="8dp"
                        android:stateListAnimator="@null"
                        android:text="3"
                        android:textSize="20sp" />

                </LinearLayout>

                <NumberPicker
                    android:id="@+id/rating"
                    android:layout_width="0dp"
                    android:layout_height="157dp"
                    android:layout_margin="16dp"
                    android:layout_weight=".25"
                    android:padding="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_viewEdit"
                    android:textSize="20sp" />
            </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:scrollbars="vertical"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                    app:layout_constraintVertical_bias="0" />

            </LinearLayout>


        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>